 $Id: ChangeLog,v 1.131.2.25.2.88 2010/09/20 10:25:44 uehira Exp $

2010-09-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/extraw.c : 64 bit clean.
	* src/send_raw_old.c : 64 bit clean?
	* src/final2finalb.c : 64bit check.
	* src/finalb2final.c : 64bit check.
	* src/finalb2seis.c : 64bit check.
	* src/find_picks.c : 64bit check.
	* src/pick2final.c : 64bit check.
	* src/pick2finalb.c : 64bit check.
	* src/pick2tseis.c : 64bit check.
	* while(1) --> for(;;)
	* adj_sec() moved to 'src/winlib.c'.
	  src/final2finalb.c, src/pick2finalb.c
	  win.c : adj_sec() --> adj_sec_win()
	* read_param() ---> read_param_line() [src/winlib.c]
	  src/evdetect.c, src/events.c, src/pmon.c, src/setexb.c, src/wtape.c

2010-09-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/send_raw.c : 64 bit clean?

2010-09-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wadd2.c : 64 bit clean.
	* src/rtape.c : 64 bit clean.
	* src/wtime.c : 64 bit clean.
	* src/wck_wdisk.c : 64 bit clean.
	* rename MACROs
	  SWAPL --> SWAP32
	  SWAPS --> SWAP16
	  MKSWAPS --> MKSWAP16
	* replace read_data() with read_onesec_win2() [src/winlib.c]
	  src/wch.c, src/wchch.c, src/wed.c, src/wtime.c
	* shift_sec() moved to 'src/winlib.c'.
	  src/raw_time.c, src/send_raw.c, src/wtime.c

2010-09-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wadd.c : 64 bit clean.
	* src/wed.c : 64 bit clean.
	* src/winadd.c : added a option (-m).
	  -m : only try memory mode.

2010-09-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winadd.c : added options (-f, -s).
	  -f : force file mode.
 	  -s : channel sort mode.

2010-09-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/ee_manager, prog/wincd : The $* variables has been removed
	  in perl 5.10.
	* [src][man*]/Makefile.am : uninstall symblic links.
	  uninstall-hook --> uninstall-local
	* Version 2.1.7 released.

2010-08-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/split_win.c : added.
	* Version 2.1.6 released.
